# csce_1040_assn1

./: CMakeLists.txt  LICENSE  README  README.md
src/: debug.c  debug.h  grading.c  grading.h  shell.c  test_serialize.c  tui.c  tui.h  util.c  util.h
src/collections/: linkedlist.c  linkedlist.h
src/models/: model_io.c  model_io.h  models.c  models.h
src/shell/: model_display.c  model_display.h  options.h  print_gradebook.c  shell_ui.c
src/shell/commands/: command.h  course.c  enrollment.c  gradebook.c  student.c
src/tests/: lltest.c  test_manipulation.c  test_serialize.c
